chore: just pressed clean up button