@@ -83,14 +83,16 @@ import com.watabou.utils.Reflection;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 public class QuickRecipe extends Component {
 
-	private ArrayList<Item> ingredients;
+	private final ArrayList<Item> ingredients;
 
-	private ArrayList<ItemSlot> inputs;
-	private QuickRecipe.arrow arrow;
-	private ItemSlot output;
+	private final ArrayList<ItemSlot> inputs;
+	private final QuickRecipe.arrow arrow;
+	private final ItemSlot output;
 
 	public QuickRecipe(Recipe.SimpleRecipe r) {
 		this(r, r.getIngredients(), r.sampleOutput(null));
@@ -264,7 +266,7 @@ public class QuickRecipe extends Component {
 		switch (pageIdx) {
 			case 0:
 			default:
-				result.add(new QuickRecipe(new Potion.SeedToPotion(), new ArrayList<>(Arrays.asList(new Plant.Seed.PlaceHolder().quantity(3))), new WndBag.Placeholder(ItemSpriteSheet.POTION_HOLDER) {
+				result.add(new QuickRecipe(new Potion.SeedToPotion(), new ArrayList<>(Collections.singletonList(new Plant.Seed.PlaceHolder().quantity(3))), new WndBag.Placeholder(ItemSpriteSheet.POTION_HOLDER) {
 					@Override
 					public String name() {
 						return Messages.get(Potion.SeedToPotion.class, "name");
@@ -281,7 +283,7 @@ public class QuickRecipe extends Component {
 				for (Class<?> cls : Generator.Category.SCROLL.classes) {
 					Scroll scroll = (Scroll) Reflection.newInstance(cls);
 					if (!scroll.isKnown()) scroll.anonymize();
-					ArrayList<Item> in = new ArrayList<>(Arrays.asList(scroll));
+					ArrayList<Item> in = new ArrayList<>(List.of(scroll));
 					result.add(new QuickRecipe(r, in, r.sampleOutput(in)));
 				}
 				return result;
@@ -312,7 +314,7 @@ public class QuickRecipe extends Component {
 				r = new ExoticPotion.PotionToExotic();
 				for (Class<?> cls : Generator.Category.POTION.classes) {
 					Potion pot = (Potion) Reflection.newInstance(cls);
-					ArrayList<Item> in = new ArrayList<>(Arrays.asList(pot));
+					ArrayList<Item> in = new ArrayList<>(Collections.singletonList(pot));
 					result.add(new QuickRecipe(r, in, r.sampleOutput(in)));
 				}
 				return result;
@@ -320,7 +322,7 @@ public class QuickRecipe extends Component {
 				r = new ExoticScroll.ScrollToExotic();
 				for (Class<?> cls : Generator.Category.SCROLL.classes) {
 					Scroll scroll = (Scroll) Reflection.newInstance(cls);
-					ArrayList<Item> in = new ArrayList<>(Arrays.asList(scroll));
+					ArrayList<Item> in = new ArrayList<>(Collections.singletonList(scroll));
 					result.add(new QuickRecipe(r, in, r.sampleOutput(in)));
 				}
 				return result;
@@ -340,18 +342,18 @@ public class QuickRecipe extends Component {
 				return result;
 			case 6:
 				result.add(new QuickRecipe(new LiquidMetal.Recipe(),
-						new ArrayList<>(Arrays.asList(new MissileWeapon.PlaceHolder())),
+						new ArrayList<>(List.of(new MissileWeapon.PlaceHolder())),
 						new LiquidMetal()));
 				result.add(new QuickRecipe(new LiquidMetal.Recipe(),
-						new ArrayList<>(Arrays.asList(new MissileWeapon.PlaceHolder().quantity(2))),
+						new ArrayList<>(Collections.singletonList(new MissileWeapon.PlaceHolder().quantity(2))),
 						new LiquidMetal()));
 				result.add(new QuickRecipe(new LiquidMetal.Recipe(),
-						new ArrayList<>(Arrays.asList(new MissileWeapon.PlaceHolder().quantity(3))),
+						new ArrayList<>(Collections.singletonList(new MissileWeapon.PlaceHolder().quantity(3))),
 						new LiquidMetal()));
 				result.add(null);
 				result.add(null);
 				result.add(new QuickRecipe(new ArcaneResin.Recipe(),
-						new ArrayList<>(Arrays.asList(new Wand.PlaceHolder())),
+						new ArrayList<>(List.of(new Wand.PlaceHolder())),
 						new ArcaneResin()));
 				return result;
 			case 7:
